--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PredictionActivity" />
-        <activity android:name=".Main3Activity"></activity>
+        <activity
+            android:name=".PredictionActivity"
+            android:label="@string/title_activity_prediction"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.peter.caffeinecareful.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
