--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,8 @@
         <activity
             android:name=".MainActivityBasic"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity" />
-
         <activity
             android:name=".MorningActivity"
             android:label="@string/title_activity_morning"
@@ -33,8 +25,17 @@
             android:name=".EveningActivity"
             android:label="@string/title_activity_evening"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SplashScreen" />
 
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
