--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
             android:name=".MainActivityBasic"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity" />
         <activity
             android:name=".MorningActivity"
+            android:parentActivityName=".MainActivityBasic"
             android:label="@string/title_activity_morning"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
